installed and configure ckeditor

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,4 +1,4 @@
-<%= #using undescore means this page is a "partial". can reuse this layout across multiple pages  %>
+<% #using undescore means this page is a "partial". can reuse this layout across multiple pages  %>
 
 <%= simple_form_for @post do |f| %>
   <% if @post.errors.any? %>
