--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,8 +9,12 @@
   </head>
 
   <body>
+    <!-- Render navigation bar -->
+    <%= render "layouts/navigation" %>
     <p class="notice"><%= notice %></p>
   	<p class="alert"><%= alert %></p>
-    <%= yield %>
+    <div class="container-fluid">
+      <%= yield %>
+    </div>
   </body>
 </html>
